Use ImmutableList instead of List